force-app/main/default/objects/Sales_Target__c/fields/Actual_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sale_Value__c</fullName>
    <label>Actual Sale Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>