force-app/main/default/objects/Sales_Target__c/fields/Target_Scope__c.field-meta.xml
<CustomField>
    <fullName>Target_Scope__c</fullName>
    <label>Target Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Overall</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>