force-app/main/default/objects/Sales_Target__c/fields/Target_Units__c.field-meta.xml
<CustomField>
    <fullName>Target_Units__c</fullName>
    <label>Target Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>