force-app/main/default/objects/Sales_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Actual_Sale_Value__c</columns>
    <columns>Target_Amount__c</columns>
    <columns>Target_Scope__c</columns>
    <columns>Target_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>